fix: no more px for modals, some margin on mobile

--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -17,11 +17,13 @@
   border: 1px solid #D5D5D5;
   border-radius: 0px 0.7em 0.7em;
 
-  width: 600px;
-  max-width: 100%;
+  width: 50em;
+  max-width: calc(100% - 1em);
 
-  height: 400px;
-  max-height: 100%;
+  height: 35em;
+  max-height: calc(100% - 1em);
+
+  box-sizing: border-box;
 
   z-index: 1010;
 
@@ -31,7 +33,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 20px 50px 20px 20px;
+    padding: 0.5em 1em 0.5em 1em;
     overflow: auto;
     box-sizing: border-box;
   }
